0.44
 - much improved preferences dialog (thanks to Sebastian Heinlein)

0.43
 - the descriptionParser for rpm has changed
   (the actuall parser is configurable now)
 - new find and changes dialog layout, more HIG compliant 
   (thanks to Sebastian Heinlein)
 - more bugfixes in the PkgTreeView and the new sorting code

0.42
 - download percentage is now always calculated correctly 
   (thanks to David Wilson)
 - save selection on "pin", "update" and "proceed" now
 - some bugs fixed in the new sortable tree/list
 - the order of the columns in the treeview is configurable now
 - updated german translation (thanks to Sebastian Heinlein)
 - updated spanish translation (thanks to Javier Serrador)
 - updated japanese translation (thanks to Daisuke SUZUKI)

0.41
 - updated russian translation
 - [debian only] debian package tags support
 - sortable installed size column added
 - "Information" tab now scrollable
    
0.40
 - updated japanese translation
 - new status "Obsolete and locally installed" for status view
 - added depends and provides to the "Find tool" window
 - more predefined filters (new, residual config, debconf)
 - added "provides" tab
 - added "remove with dependencies" feature
 - default action for delete button can be configured

0.39
 - "Installed Files" tab (debian only)
 - added tooltips to status filter tab
 - reworked search dialog, it's possible to search for 
   "name, version, description, maintainer" now
 - better checking if a pkg is not installable 
 - location of the synaptic.desktop file has changed to better integrate  
   with the desktop enviroment

0.38 
 - updated russian translation
 - works on older distros (gtk2.0 and gcc-2.95+ fixes) for real this time :)
 - better man-page
 - if a pkg is not installable, the user gets a warning if the tries to 
   install it
 - improved "by Status" tree-view, displays now by:
   "installed, installed and upgradeable, new in archive, not installed,
    not installed but residual config"