@@ -1,3 +1,5 @@
+* implement font size choser
+* implement a new search function
 * CHECK if the boxes have the right size for german (and other) 
   translations
 
