@@ -1,5 +1,10 @@
 0.44
+ - the search entry in the main window is interactive again 
  - much improved preferences dialog (thanks to Sebastian Heinlein)
+ - new italian translation (thanks  Mauro Colorio)
+ - updated spanish translation (thanks Fco. Javier Fernandez)
+ - updated russian translation (thanks  Sviatoslav Sviridov)
+ - new belarussian translation (thanks Vital Khilko <dojlid@mova.org>)
 
 0.43
  - the descriptionParser for rpm has changed
